# ServerOpsMonitor

./: .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  api_main.py  bot_main.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: workflow.yml
api/: api_main.py  main.py
api/routes/: admin.py  admins.py  login.py  server.py  servers.py
api/templates/: add_server.html  admin.html  index.html  info_server.html  main_menu.html  permission_menu.html  servers.html
bot/: bot_main.py
db/: db.py  models.py
engine_sql/: db.py  fsm_states.py  models.py
files/: check_server.py  keyboard.py  main_logic.py  validate.py
handlers/: fsm_states.py  keyboard.py  server.py
infra/: ansible_check_server.py  check_server.py  keyboard.py  server_handlers.py  validate.py
repositories/: server_queries.py  server_repository.py
services/: server_check.py  server_restart.py  server_update.py
texts/: texts.py
utils/: util_check_server.py  utils_admin.py  utils_check_admin.py  utils_check_server.py  validate_ip.py
