[project]
name="ServerOps_Monitor"
version = "0.1.0"
description = "Telegram bot for monitoring and managing servers via Ansible."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.26.0",
    "ansible-runner>=2.4.3",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "ruff>=0.15.7",
    "sqlalchemy>=2.0.48",

]
