[project]
name="ServerOps_Monitor"
version = "0.1.0"
description = "Telegram bot for monitoring and managing servers via Ansible."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.26.0",
    "ansible-runner>=2.4.3",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi-users>=15.0.5",
    "fastapi[standart]>=0.135.2",
    "jinja2>=3.1.6",
    "ruff>=0.15.7",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]
